@@ -13,6 +13,52 @@
 If `socat[73221] E bind(5, {LEN=0 AF=2 0.0.0.0:6000}, 16): Address already in use`
     - ` lsof -n -i | grep 6000` and `kill -9` the process  
     
+### taverna script
+```bash
+#!/bin/sh
+
+set -e
+
+## resolve links - $0 may be a symlink
+prog="$0"
+
+real_path() {
+    readlink -m "$1" 2>/dev/null || python -c 'import os,sys;print os.path.realpath(sys.argv[1])' "$1"
+}
+
+realprog=`real_path "$prog"`
+taverna_home=`dirname "$realprog"`
+javabin=java
+if test -x "$taverna_home/jre/bin/java"; then
+    javabin="$taverna_home/jre/bin/java"
+elif test -x "$JAVA_HOME/bin/java"; then
+    javabin="$JAVA_HOME/bin/java"
+fi
+
+# 32-bit compatible memory settings:
+# 700 MB memory, 200 MB for classes
+exec "$javabin" -Xmx700m -XX:MaxPermSize=200m \
+  "-Draven.profile=file://$taverna_home/conf/current-profile.xml" \
+  "-Dtaverna.startup=$taverna_home" \
+  "-Dtaverna.dotlocation=$taverna_home/bin/dot.sh" \
+  -Djava.system.class.loader=net.sf.taverna.raven.prelauncher.BootstrapClassLoader \
+  -Dapple.laf.useScreenMenuBar=true \
+  -Dapple.awt.graphics.UseQuartz=false \
+  -Dcom.sun.net.ssl.enableECC=false \
+  -Djsse.enableSNIExtension=false \
+  -Dsun.swing.enableImprovedDragGesture \
+  -jar "$taverna_home/lib/"prelauncher-*.jar \
+  ${1+"$@"}
+```
+
+### Examine the file path created by pyhton
+```bash
+echo $realprog=`real_path "$prog"`  
+`/app/taverna-workbench-core-2.5.0/taverna.sh`  
+echo $taverna_home=`dirname "$realprog"`  
+`/app/taverna-workbench-core-2.5.0/`
+```
+
 ## Build the image  
 `docker build -t ken/test-taverna-jdk8 .`
 
